--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nrtest",
+  "name": "apiserver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,7 +14,7 @@
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "lodash":"4.17.20",
-      "newrelic": "^9.10.2",
+      "newrelic": "latest",
       "nodemon": "^2.0.20",
       "pino": "^8.11.0",
       "pino-http": "^8.3.3"
