--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -2,8 +2,8 @@ name: Bump version
 on:
   push:
     branches:
-      - main
-      
+    - main
+
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -17,3 +17,21 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
+
+  newrelic:
+    needs: build
+    runs-on: ubuntu-latest
+    name: New Relic
+    steps:
+    # This step builds a var with the release tag value to use later
+    - name: Set Release Version from Tag
+      run: echo "RELEASE_VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
+    # This step creates a new Change Tracking Marker
+    - name: New Relic Application Deployment Marker
+      uses: newrelic/deployment-marker-action@v2.3.0
+      with:
+        apiKey: ${{ secrets.NEW_RELIC_API_KEY }}
+        guid: ${{ secrets.NEW_RELIC_DEPLOYMENT_ENTITY_GUID }}
+        version: "${{ env.RELEASE_VERSION }}"
+        user: "${{ github.actor }}"
+        description: ${{ github.event.head_commit.message }}
